Fixes line wrapping beyond padding in Content

--- a/src/components/Content.css
+++ b/src/components/Content.css
@@ -33,9 +33,11 @@
   color: gray;
 }
 
+.bodyWrapper {
+  padding: 0px 50px 0px 50px;
+}
+
 .body {
-  white-space: pre-line;
-  padding: 0px 60px 0px 60px;
   cursor: pointer;
   margin: 0;
 }
